--- a/README
+++ b/README
@@ -2,64 +2,68 @@ NAME
     File::Temp::Trace - Trace the creation of temporary files
 
 VERSION
-    Version 0.01
+    Version 0.02
+
+REQUIREMENTS
+    The following packages are required:
+
+      Attribute::Handlers
+      Carp
+      File::Path
+      File::Spec
+      File::Temp
+      overload
+      Scalar::Util
+      self
 
 SYNPOSIS
+        package MyPkg;
+
+        use File::Temp::Trace;
+
+        my $tmp = File::Temp::Trace->tempdir();
+
+        print STDERR "New temporary directory ${tmp} created.";
+
+        sub create_file : skip_temp_log {
+            my ($tmp, $ext) = @_;
+            return $tmp->tempfile( suffix => $ext );
+        }
+
+        sub create_text {
+            my ($tmp, $ext) = @_;
+            return create_file($tmp, '.txt');
+        }
+
+        my $fh = create_text($tmp);
+
+        # $fh->filename will be named "MyPkg-create_text-XXXXXXXX.txt",
+        # where XXXXXXXX is a unique string.
+
 DESCRIPTION
     This module allows you to trace the creation of temporary files. By
-    default, files are all created in the same directory, and files are
-    prefixed by the name of the function or method that created them.
+    default, these files are all created in the same directory, and their
+    names are prefixed by the name of the function or method that created
+    them.
 
     You can optionally log the creation of temporary files with a stack
     trace as well.
 
-  new
-    cleanup
-    template
-    tmpdir
-    dir
+REVISION HISTORY
+    Revision history for File-Temp-Trace
+    
+    0.02    Sun Jun 19 17:00:53 BST 2011
+                Version ready for CPAN.
+    
+    0.01    Sat Jun 18 12:35:53 BST 2011
+                Prototype version uploaded to github
 
-  dir
-  log
-  file
-    unlink
-    suffix
-    exlock
-    log
 
 SEE ALSO
     File::Temp
 
 AUTHOR
-    Robert Rothenberg, "<rrwo@cpan.org>"
-
-BUGS
-    Please report any bugs or feature requests to
-    "bug-file-temp-trace@rt.cpan.org", or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=File-Temp-Trace>.
-
-SUPPORT
-    You can find documentation for this module with the perldoc command.
-
-        perldoc File::Temp::Trace
-
-    You can also look for information at:
-
-    *   RT: CPAN's request tracker
-
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-Temp-Trace>
-
-    *   AnnoCPAN: Annotated CPAN documentation
-
-        <http://annocpan.org/dist/File-Temp-Trace>
-
-    *   CPAN Ratings
-
-        <http://cpanratings.perl.org/d/File-Temp-Trace>
-
-    *   Search CPAN
-
-        <http://search.cpan.org/dist/File-Temp-Trace/>
+    Robert Rothenberg, `<rrwo@cpan.org>'
 
 LICENSE AND COPYRIGHT
     Copyright 2011 Robert Rothenberg.
